--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
             <p>
               We are a group of four individuals with a shared passion for the
               Olympics, united by our diverse academic backgrounds in Computer
-              Science, Economics, Earth and Ocean Sciences, and Statistics. Even though we have different backgrounds, we have a commong love for sports and in particular the Olympics.
+              Science, Economics, Earth and Ocean Sciences, and Statistics. Even though we have different backgrounds, we have a common love for sports and in particular the Olympics.
               Though our expertise varies—from technical algorithms to
               socio-economic interpretations, geographic connections to
               environmental factors, and statistical analyses—we share a common
