--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Adwait Kulkarni</title>
+    <title>About Us</title>
     <meta charset="utf-8" />
     <meta
       name="robots"
