--- a/adwait.html
+++ b/adwait.html
@@ -50,6 +50,37 @@
             <header class="align-center">
               <h2>National Performance and Dominance</h2>
             </header>
+            <p class="align-center">
+              The visualizations below explore the performance of countries in
+              the Summer and Winter Olympic Games from 1896 to 2016. The data is
+              visualized using heatmaps, faceted bar charts, and line charts to
+              analyze the dominance of countries in different events over time.
+              The visualizations are interactive and allow users to explore the
+              data by selecting specific countries, years, and seasons.
+              Following are the research questions supported by the
+              visualizations:
+            </p>
+
+            <ul>
+              <li>
+                <strong
+                  >Which countries have been the most dominant in terms of total
+                  medals won, and how has this changed over time?</strong
+                >
+              </li>
+              <li>
+                <strong
+                  >How does medal count distribution differ between Summer and
+                  Winter games for top-performing countries?</strong
+                >
+              </li>
+              <li>
+                <strong
+                  >Are there specific sports or events where certain countries
+                  have consistently excelled?</strong
+                >
+              </li>
+            </ul>
             <div>
               <button onclick="resetChart()" class="reset-button">
                 Reset Charts
@@ -77,6 +108,221 @@
                 frameborder="0"
               ></iframe>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="two" class="wrapper style2">
+      <div class="inner">
+        <div class="box">
+          <div class="content">
+            <header class="align-center">
+              <h2>Tasks Supported</h2>
+            </header>
+            <p class="align-center">
+              The visualizations above support the following tasks by employing
+              interactive heatmaps, faceted bar charts, and line charts that
+              dynamically adapt based on user selections.:
+            </p>
+
+            <ul>
+              <li>
+                <strong>Analyze Country Trends:</strong> To identify the most
+                dominant countries in terms of the number of medals won.
+              </li>
+              <li>
+                <strong>Interact with Time:</strong> To visualize the domination
+                of countries in different events over time.
+              </li>
+              <li>
+                <strong>Compare Seasons:</strong> To compare the performance of
+                top performing countries in different events over both Summer
+                and Winter seasons and follow a country's performance over time.
+              </li>
+              <li>
+                <strong>Deep Dive into a Country:</strong> To choose a country
+                to analyze in more detail in terms of the number of medals won
+                over the years in both Summer and Winter seasons.
+              </li>
+              <li>
+                <strong>Identify Popular Sports:</strong> To identify the most
+                popular sports in both Summer and Winter seasons.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="two" class="wrapper style2">
+      <div class="inner">
+        <div class="box">
+          <div class="content">
+            <header class="align-center">
+              <h2>Visualization Design Justification</h2>
+            </header>
+            <p class="align-center"></p>
+            <h3>Heatmap and Detail Brush Chart (Bidirectional Link)</h3>
+            <ul>
+              <li>
+                <strong>Mark:</strong> The mark type used is a point to
+                represent each country's performance in a specific year in the
+                heatmap. In the brush chart, the mark type used is a segment to
+                represent the medal counts won by a country in a specific year.
+              </li>
+              <li>
+                <strong>Channels:</strong> For the heatmap, the horizontal
+                position and order channel denotes years starting from 1896 to
+                2016, while the vertical position channel represents a country
+                (NOC). The saturation channel represents the number of medals
+                won by the country in each year and this is a magnitude ordered
+                channel as the number of medals is a numerical attribute. The
+                color scheme used is sequential as the number of medals
+                increases from a minimum to a maximum. Each cell in the heatmap
+                has shared boundaries in terms of years and countries,
+                horizontally and vertically respectively.<br />
+                For the brush chart, the horizontal position and order channels
+                represent the year and the vertical position and order channels
+                represent the number of medals won by a country. The color hue
+                channel represents the type of season (Summer or Winter).
+              </li>
+              <li>
+                <strong>Characteristics of Channels:</strong> In the heatmap,
+                the sequential color scheme is used to encode magnitude of the
+                number of medals won by a country in each year, helping users
+                identify regions of high or low medal counts at a glance. The
+                position channel for years helps the users read the graph from
+                left to right with the years increasing from 1896 to 2016.
+                <br />
+                In the brush chart, the 2 colors (orange and blue) on the
+                opposite ends of the color hue channel help the users identify
+                the Summer and Winter seasons clearly without getting mixed up.
+                The years are ordered from left to right in an increasing order
+                enabling left to right reading and the number of medals are
+                ordered from top to bottom in an increasing order enabling top
+                to bottom reading.
+              </li>
+              <li>
+                <strong>Interactivity:</strong> The heatmap is bidirectionally
+                linked to the detailed brush chart view below it. Clicking on a
+                cell in the heatmap will highlight the corresponding country in
+                the heatmap and the corresponding country in the detailed brush
+                chart view. Similarly, clicking on a bar in the brush chart will
+                highlight the corresponding country in the heatmap. When you
+                select a cell in the heatmap or a bar in the brush chart,
+                everything else in both the charts will be unhighlighted, and
+                clicking anywhere other than the highlighted parts will remove
+                the highlight. Users can select a season to display the trends
+                for Summer or Winter in both the charts using radio buttons. For
+                both the heatmap and brush chart, there is a tooltip on hovering
+                over a cell to show the number of medals won by the country in
+                the selected season for the corresponding year.
+              </li>
+              <li>
+                <strong>Critique:</strong> There is a lot of information being
+                displayed in the heatmap, so users may not be able to completely
+                understand the data at a glance. Users may also not be able to
+                compare the performance of different countries in different
+                seasons as the heatmap only shows the performance of a country
+                in a specific season and you have to use the radio buttons to
+                switch between seasons, so you might have to manually remember
+                the trends of the previous season. Due to the sequential color
+                scheme, users might not be able to identify the magnitude of the
+                number of medals won by a country in each year without hovering
+                over cells. In the brush chart, it is hard to select a country
+                as multiple countries are stacked on top of each other in the
+                same bar. and can face difficulty in distinguihsing between
+                similarly colored cells.
+              </li>
+            </ul>
+            <p class="align-center"></p>
+            <h3>Faceted Bar Chart</h3>
+            <ul>
+              <li>
+                <strong>Mark:</strong> The mark type used is a segment (bar) to
+                represent the medal counts won by a country in a specific year.
+              </li>
+              <li>
+                <strong>Channels:</strong> The horizontal position and order
+                channel denotes medal counts starting from the minimum to the
+                maximum, while the vertical position channel represents a
+                country (NOC). The length of the bars represents the number of
+                medals won by the country in a specific year.
+              </li>
+              <li>
+                <strong>Characteristics of Channels:</strong> The position
+                channel on a common scale follows Weber's Law which states that
+                human beings are more likely to compare objects on a common
+                scale than on unaligned scales. It is easy to compare between 2
+                countries because the length of the bars is proportional to the
+                number of medals won by a country in a specific year.
+              </li>
+              <li>
+                <strong>Interactivity:</strong> There is a year dropdown menu to
+                select a specific year to display the medal counts won by all
+                country in that year. You can also select a season to display
+                the medal counts for Summer or Winter using radio buttons.
+                Faceting by country ensures clarity when exploring multiple data
+                points. Lastly, there is a tooltip on hovering over a bar to
+                show the number of medals won by the country in the selected
+                season for the corresponding year.
+              </li>
+              <li>
+                <strong>Critique:</strong> For some seasons in certain years,
+                not all countries take part in the Games, so users might see
+                fewer or more countries on choosing different years or seasons.
+              </li>
+            </ul>
+            <p class="align-center"></p>
+            <h3>Line Chart Matrix</h3>
+            <ul>
+              <li>
+                <strong>Mark:</strong> The mark type used is a line (path) to
+                represent a country over multiple years.
+              </li>
+              <li>
+                <strong>Channels:</strong> The horizontal position and order
+                channel denotes years starting from 1896 to 2016, while the
+                vertical position and order channel represents medal counts. The
+                color hue channel represents a country (NOC).
+              </li>
+              <li>
+                <strong>Characteristics of Channels:</strong> The years are
+                ordered from left to right in an increasing order enabling left
+                to right reading and the medal counts are ordered from top to
+                bottom in an increasing order enabling top to bottom reading.
+                With the categorical-identity color hue channel, users can
+                easily choose a country and follow its trend over multiple years
+                as country is a nominal attribute.
+              </li>
+              <li>
+                <strong>Interactivity:</strong> By default, the line chart shows
+                the medal counts won by 5 countries in all years in certain
+                sports. The sports shown are the top 12 most popular ones in a
+                season and they are column-faceted. You can select a season to
+                display the medal counts for Summer or Winter using radio
+                buttons. You can use the "Number of Countries" slider to choose
+                the number of countries to display at any given time on all the
+                charts (default value is 5). You can also click on a line in the
+                chart to only show that country in all the line charts (other
+                country lines are dimmed) and this selection is preserved when
+                you switch between seasons. Clicking anywhere else in the chart
+                will remove the highlighted country selection. Lastly, there is
+                a tooltip on hovering over a line to show the number of medals
+                won by a country in the selected season for the corresponding
+                year for that sport.
+              </li>
+              <li>
+                <strong>Critique:</strong> When the chart is showing all the
+                countries in a season, it is hard to compare the performance of
+                different countries in different sports because the lines cross
+                each other multiple times over the years. It can also be
+                difficult to get the exact medal count for a country without
+                hovering over its line as the vertical axis is only for the
+                charts on the left margin.
+              </li>
+            </ul>
           </div>
         </div>
       </div>
