--- a/adwait.html
+++ b/adwait.html
@@ -53,11 +53,11 @@
             <p class="align-center">
               The visualizations below explore the performance of countries in
               the Summer and Winter Olympic Games from 1896 to 2016. The data is
-              visualized using heatmaps, faceted bar charts, and line charts to
-              analyze the dominance of countries in different events over time.
-              The visualizations are interactive and allow users to explore the
-              data by selecting specific countries, years, and seasons.
-              Following are the research questions supported by the
+              visualized using heatmaps, faceted bar charts, and line chart
+              matrices to analyze the dominance of countries in different events
+              over time. The visualizations are interactive and allow users to
+              explore the data by selecting specific countries, years, and
+              seasons. Following are the research questions supported by the
               visualizations:
             </p>
 
