add more stuff to interactivity section

--- a/adwait.html
+++ b/adwait.html
@@ -209,15 +209,20 @@
                 cell in the heatmap will highlight the corresponding country in
                 the heatmap and the corresponding country in the detailed brush
                 chart view. Similarly, clicking on a bar in the brush chart will
-                highlight the corresponding country in the heatmap. When you
-                select a cell in the heatmap or a bar in the brush chart,
-                everything else in both the charts will be unhighlighted, and
-                clicking anywhere other than the highlighted parts will remove
-                the highlight. Users can select a season to display the trends
-                for Summer or Winter in both the charts using radio buttons. For
-                both the heatmap and brush chart, there is a tooltip on hovering
-                over a cell to show the number of medals won by the country in
-                the selected season for the corresponding year.
+                highlight the corresponding country in the heatmap. You can also
+                hover over a cell in the heatmap to show just the bars for that
+                cell in the brush chart and vice versa. When you select a cell
+                in the heatmap or a bar in the brush chart, everything else in
+                both the charts will be unhighlighted, and clicking anywhere
+                other than the highlighted parts will remove the highlight. This
+                selection is preserved when you switch between seasons. Users
+                can select a season to display the trends for Summer or Winter
+                in both the charts using radio buttons. Users can also decide if
+                they want to filter out countries based on how many medals they
+                have won (low, medium, high) using a dropdown. For both the
+                heatmap and brush chart, there is a tooltip on hovering over a
+                cell to show the number of medals won by the country in the
+                selected season for the corresponding year.
               </li>
               <li>
                 <strong>Critique:</strong> There is a lot of information being
