--- a/arushi.html
+++ b/arushi.html
@@ -28,10 +28,12 @@
       <ul class="links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="adwait.html">Adwait's Analysis</a></li>
-        <li><a href="arushi.html">Arushi's Analysis</a></li>
-        <li><a href="briana.html">Briana's Analysis</a></li>
-        <li><a href="sri.html">Sri's Analysis</a></li>
+        <li><a href="adwait.html">National Performance and Dominance</a></li>
+        <li><a href="arushi.html">Sports and Events</a></li>
+        <li>
+          <a href="briana.html">Athlete Demographics and Performance Trends</a>
+        </li>
+        <li><a href="sri.html">Geography & Seasons</a></li>
       </ul>
     </nav>
     <!-- One -->
