--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
     <nav id="menu">
       <ul class="links">
         <li><a href="about.html">About</a></li>
-        <li><a href="adwait.html">Adwait's Analysis</a></li>
-        <li><a href="arushi.html">Arushi's Analysis</a></li>
-		<li><a href="briana.html">Briana's Analysis</a></li>
-		<li><a href="sri.html">Sri's Analysis</a></li>
+        <li><a href="adwait.html">National Performance and Dominance</a></li>
+        <li><a href="arushi.html">Sports and Events</a></li>
+        <li>
+          <a href="briana.html">Athlete Demographics and Performance Trends</a>
+        </li>
+        <li><a href="sri.html">Geography & Seasons</a></li>
       </ul>
     </nav>
     <!-- Banner -->
@@ -41,18 +43,18 @@
           <header>
             <h2>The Olympic Games</h2>
           </header>
-		  <p>
-			<strong>Adwait Kulkarni</strong>
-		  </p>
-		  <p>
-			<strong>Arushi Goel</strong>
-		  </p>
-		  <p>
-			<strong>Briana Pavey</strong>
-		  </p>
-		  <p>
-			<strong>Sri Chaitanya Bonthula</strong>
-		  </p>
+          <p>
+            <strong>Adwait Kulkarni</strong>
+          </p>
+          <p>
+            <strong>Arushi Goel</strong>
+          </p>
+          <p>
+            <strong>Briana Pavey</strong>
+          </p>
+          <p>
+            <strong>Sri Chaitanya Bonthula</strong>
+          </p>
         </div>
       </article>
     </section>
