--- a/adwait.html
+++ b/adwait.html
@@ -67,9 +67,16 @@
               <li>
                 <strong
                   >Which countries have been the most dominant in terms of total
-                  medals won, and how has this changed over time?</strong
+                  medals won?</strong
                 >
               </li>
+              <li>
+                <strong
+                  >How has the performance of top-performing countries evolved
+                  over time?</strong
+                >
+              </li>
+
               <li>
                 <strong
                   >How does medal count distribution differ between Summer and
@@ -97,16 +104,24 @@
             <div class="iframe-container">
               <iframe
                 src="charts/adwait/heatmap_and_bar_chart.html"
-                width="1300"
-                height="1000"
+                width="1000"
+                height="1300"
                 frameborder="0"
               ></iframe>
             </div>
-            <div>
+            <div class="iframe-container">
               <iframe
                 src="charts/adwait/line_chart_matrix.html"
                 width="1700"
                 height="1210"
+                frameborder="0"
+              ></iframe>
+            </div>
+            <div class="iframe-container">
+              <iframe
+                src="charts/adwait/combined_chart.html"
+                width="1000"
+                height="850"
                 frameborder="0"
               ></iframe>
             </div>
