update chart and chart info

--- a/adwait.html
+++ b/adwait.html
@@ -391,7 +391,8 @@
               <li>
                 <strong>Mark:</strong> The mark type used is an interlocking
                 area (poly) to represent the medal counts won by a country in a
-                specific year.
+                specific year. The bottom chart uses a mark type of point to
+                represent an individual country.
               </li>
               <li>
                 <strong>Channels:</strong> The horizontal position and order
@@ -420,17 +421,24 @@
                 use the "Country" dropdown to choose a specific country to
                 display. Once you have chosen a country, by default, the top
                 chart shows the medal counts won by that country in all years in
-                both seasons. The bottom chart (Total Medal Counts for All
+                both seasons. The bottom chart (Total Medal Counts for Top 50
                 Countries) has a brush selection built in so rectangular regions
                 that represent the time window you want to analyze can be
                 selected and by moving this selection box around with the mouse,
                 you can view updates only for that time window in the top chart.
-                You can also click on a poly in the top chart to only show that
-                country in the bottom chart (other country polys are dimmed) and
-                this selection is preserved when you switch between seasons.
+                Whenever you select a country in the dropdown, the bottom chart
+                will show the medal counts for that country in all years using
+                red points, so you can compare the trend of that country in
+                comparison to the total medals won by the top 50 countries.
+                Lastly, both charts have tooltips that have information about
+                the number of medals won by a country in a specific year.
               </li>
               <li>
-                <strong>Critique:</strong>
+                <strong>Critique:</strong> The country selection dropdown has 50
+                options so it can be a bit long to scroll through and can get
+                overwhelming pretty quickly if you are not familiar with NOC
+                codes. The area density chart can be hard to identify small and
+                subtle differences in medal counts between years.
               </li>
             </ul>
           </div>
