add more info and fix errors

--- a/adwait.html
+++ b/adwait.html
@@ -55,9 +55,10 @@
             <p class="align-center">
               The visualizations below explore the performance of countries in
               the Summer and Winter Olympic Games from 1896 to 2016. The data is
-              visualized using heatmaps, faceted bar charts, and line chart
-              matrices to analyze the dominance of countries in different events
-              over time. The visualizations are interactive and allow users to
+              visualized using heatmaps, faceted bar charts, line chart
+              matrices, and area density charts to analyze individual natinal
+              performance and dominance of countries in different events over
+              time. The visualizations are interactive and allow users to
               explore the data by selecting specific countries, years, and
               seasons. Following are the research questions supported by the
               visualizations:
@@ -139,7 +140,10 @@
               explore individual countries through time. With the customization
               of a time window using the bottom chart in this view, users can
               analyze the performance of a country over a specific period of
-              time.
+              time. The time window chart also has individual country dots
+              overlaid on the total medal counts for the top 50 countries, so
+              users can compare the trend of a country in comparison to the
+              other countries.
             </p>
             <div class="iframe-container">
               <iframe
@@ -183,18 +187,14 @@
                 and Winter seasons and follow a country's performance over time.
               </li>
               <li>
-                <strong>Deep Dive into a Country:</strong> To choose a country
-                to analyze in more detail in terms of the number of medals won
-                over the years in both Summer and Winter seasons.
+                <strong>Explore a Country:</strong> To choose a country to
+                analyze in more detail in terms of the number of medals won over
+                the years in both Summer and Winter seasons.
               </li>
               <li>
-                <strong>Identify Popular Sports:</strong> To identify the most
+                <strong>Analyze Performance in Popular Sports:</strong> To
+                identify how different countries have performed in the most
                 popular sports in both Summer and Winter seasons.
-              </li>
-              <li>
-                <strong>Analyze Individual Sports:</strong> To analyze
-                individual sports and identify the countries that have excelled
-                in them over time.
               </li>
             </ul>
           </div>
