--- a/arushi.html
+++ b/arushi.html
@@ -52,45 +52,127 @@
             <header class="align-center">
               <h2>Sports and Events</h2>
             </header>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at
-              dignissim augue, in iaculis neque. Etiam bibendum felis ac
-              vulputate pellentesque. Cras non blandit quam. Nunc porta, est non
-              posuere sagittis, neque nunc pellentesque diam, a iaculis lacus
-              urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat
-              volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero
-              dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros
-              rutrum metus, vel lacinia magna odio non nunc. Praesent semper
-              felis eu rhoncus aliquam. Donec at quam ac libero vestibulum
-              pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit
-              odio. Vestibulum ante ipsum primis in faucibus orci luctus et
-              ultrices posuere cubilia Curae; Maecenas commodo erat eget
-              molestie sollicitudin. Donec imperdiet, ex sed blandit dictum,
-              ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.
+            <p class="align-center">
+              Following are the research questions supported by the
+              visualizations:
             </p>
 
+            <ul>
+              <li>
+                <strong>Question 1</strong>
+              </li>
+              <li>
+                <strong>Question 2 </strong>
+              </li>
+              <li>
+                <strong>Question 3 </strong>
+              </li>
+            </ul>
+            <div>
+              <button onclick="resetChart()" class="reset-button">
+                Reset Charts
+              </button>
+
+              <script>
+                function resetChart() {
+                  location.reload();
+                }
+              </script>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="two" class="wrapper style2">
+      <div class="inner">
+        <div class="box">
+          <div class="content">
+            <header class="align-center">
+              <h2>Tasks Supported</h2>
+            </header>
             <p>
-              Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem
-              justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis
-              dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque
-              posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac
-              condimentum orci, ac varius ante. Nunc blandit quam sit amet
-              sollicitudin sodales.
+              The visualizations above support the following tasks by employing
+              ...
             </p>
 
-            <p>
-              Vivamus ultricies mollis mauris quis molestie. Quisque eu mi
-              velit. In et cursus nibh. Donec facilisis, orci sed mollis
-              hendrerit, nunc risus mattis odio, eget efficitur nisl orci a
-              lectus. Aenean finibus neque convallis orci sollicitudin
-              tincidunt. Vivamus lacinia facilisis diam, quis facilisis nisi
-              luctus nec. Aliquam ac molestie enim, ut ultrices elit. Fusce
-              laoreet vulputate risus in tincidunt. Sed commodo mollis maximus.
-              Nullam varius laoreet nibh sit amet facilisis. Donec ac odio
-              vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum
-              primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-              Nullam ac auctor mauris, in hendrerit libero.
-            </p>
+            <ul>
+              <li>
+                <strong>Task 1</strong>
+              </li>
+              <li>
+                <strong>Task 2 </strong>
+              </li>
+              <li>
+                <strong>Task 3 </strong>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="two" class="wrapper style2">
+      <div class="inner">
+        <div class="box">
+          <div class="content">
+            <header class="align-center">
+              <h2>Visualization Design Justification</h2>
+            </header>
+            <h3>Visualization 1</h3>
+            <ul>
+              <li>
+                <strong>Mark:</strong>
+              </li>
+              <li>
+                <strong>Channels:</strong>
+              </li>
+              <li>
+                <strong>Characteristics of Channels:</strong>
+              </li>
+              <li>
+                <strong>Interactivity:</strong>
+              </li>
+              <li>
+                <strong>Critique:</strong>
+              </li>
+            </ul>
+            <h3>Visualization 2</h3>
+            <ul>
+              <li>
+                <strong>Mark:</strong>
+              </li>
+              <li>
+                <strong>Channels:</strong>
+              </li>
+              <li>
+                <strong>Characteristics of Channels:</strong>
+              </li>
+              <li>
+                <strong>Interactivity:</strong>
+              </li>
+              <li>
+                <strong>Critique:</strong>
+              </li>
+            </ul>
+            <h3>Visualization 3</h3>
+            <ul>
+              <li>
+                <strong>Mark:</strong>
+              </li>
+              <li>
+                <strong>Channels:</strong>
+              </li>
+              <li>
+                <strong>Characteristics of Channels:</strong>
+              </li>
+              <li>
+                <strong>Interactivity:</strong>
+              </li>
+              <li>
+                <strong>Critique:</strong>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
