update chart title and info

--- a/adwait.html
+++ b/adwait.html
@@ -106,10 +106,10 @@
               The first two views down below show the distribution of medals won
               by countries in the Summer and Winter Olympic Games from 1896 to
               2016. The heatmap shows the number of medals won by all countries
-              over the years, while the brush chart connected to it allows for
-              an interactive country exploration. The faceted bar chart in the
-              second view shows the distribution of medals won by countries in a
-              specific year for a specific season.
+              over the years, while the detailed linked chart connected to it
+              allows for an interactive country exploration. The faceted bar
+              chart in the second view shows the distribution of medals won by
+              countries in a specific year for a specific season.
             </p>
             <div class="iframe-container">
               <iframe
@@ -137,13 +137,13 @@
             </div>
             <p class="align-center">
               The final view of the area density chart below allows users to
-              explore individual countries through time. With the customization
-              of a time window using the bottom chart in this view, users can
-              analyze the performance of a country over a specific period of
-              time. The time window chart also has individual country dots
-              overlaid on the total medal counts for the top 50 countries, so
-              users can compare the trend of a country in comparison to the
-              other countries.
+              explore individual countries (top 50) through time. With the
+              customization of a time window using the bottom chart in this
+              view, users can analyze the performance of a country over a
+              specific period of time. The time window chart also has individual
+              country dots overlaid on the total medal counts for the top 50
+              countries, so users can compare the trend of a country in
+              comparison to the other countries.
             </p>
             <div class="iframe-container">
               <iframe
