--- a/briana.html
+++ b/briana.html
@@ -195,7 +195,7 @@
             <header class="align-center">
               <h2>Visualization Design Justification</h2>
             </header>
-            <h3>Visualization 1</h3>
+            <h3>Linked Scatterplot and Density Plot</h3>
             <ul>
               <li>
                 <strong>Mark:</strong>
@@ -213,7 +213,7 @@
                 <strong>Critique:</strong>
               </li>
             </ul>
-            <h3>Visualization 2</h3>
+            <h3>Faceted Histogram and Line Plot</h3>
             <ul>
               <li>
                 <strong>Mark:</strong>
@@ -231,7 +231,7 @@
                 <strong>Critique:</strong>
               </li>
             </ul>
-            <h3>Visualization 3</h3>
+            <h3>Heatmap</h3>
             <ul>
               <li>
                 <strong>Mark:</strong>
